--- a/view/frontend/web/template/form.html
+++ b/view/frontend/web/template/form.html
@@ -5,8 +5,8 @@
 			attr: {'data-container': getCode() + '-idealBank'}
 			,enable: true
 			,options: idealBanks()
-			,optionsCaption: $t('Bank')
-			,optionsText: 'title'
+			,optionsCaption: $t('-- Select your bank --')
+			,optionsText: 'label'
 			,optionsValue: 'value'
 			,value: idealBank
 		"
