--- a/view/frontend/web/main.less
+++ b/view/frontend/web/main.less
@@ -1,4 +1,9 @@
 // 2017-03-02
 // 2017-03-03
 // https://github.com/mage2pro/ginger-payments-base/blob/0.1.0/view/frontend/web/main.js?ts=4#L47
-form.df_ginger_payments_base {background: inherit;}
+form.df_ginger_payments_base {
+	// 2017-03-04
+	// Df_GingerPaymentsBase/form
+	// https://github.com/mage2pro/ginger-payments-base/blob/0.1.6/view/frontend/web/template/form.html?ts=4#L3
+	select.idealBank {width: 13em;}
+}
