--- a/view/frontend/web/main.less
+++ b/view/frontend/web/main.less
@@ -7,6 +7,6 @@ form.df_ginger_payments_base {
 	// https://github.com/mage2pro/ginger-payments-base/blob/0.1.6/view/frontend/web/template/form.html?ts=4#L3
 	select.idealBank {
 		width: 13em;
-		& ~ .field.choice {margin-top: 1em;}
+		&:not(.df-hidden) ~ .field.choice {margin-top: 1em;}
 	}
 }
