--- a/view/frontend/web/template/idealBank.html
+++ b/view/frontend/web/template/idealBank.html
@@ -1,6 +1,7 @@
 <select class="select idealBank"
 	data-bind="
 		attr: {'data-container': getCode() + '-idealBank'}
+		,css: {'df-hidden': !idealSelected()}
 		,enable: true
 		,options: idealBanks()
 		,optionsCaption: $t('-- Select your bank --')
