--- a/view/frontend/web/main.less
+++ b/view/frontend/web/main.less
@@ -5,8 +5,5 @@ form.df_ginger_payments_base {
 	// 2017-03-04
 	// Df_GingerPaymentsBase/form
 	// https://github.com/mage2pro/ginger-payments-base/blob/0.1.6/view/frontend/web/template/form.html?ts=4#L3
-	select.idealBank {
-		width: 13em;
-		&:not(.df-hidden) ~ .field.choice {margin-top: 1em;}
-	}
+	select.bank {width: 13em; &:not(.df-hidden) ~ .field.choice {margin-top: 1em;}}
 }
