--- a/view/frontend/web/template/bankTransfer.html
+++ b/view/frontend/web/template/bankTransfer.html
@@ -1,1 +1,1 @@
-<!-- ko i18n: 'You will see payment instructions on the order placement.'--><!-- /ko -->
+<!-- ko text: config('bankTransferCheckoutMessage') --><!-- /ko -->
