--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -3,5 +3,5 @@
 	xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'
 	xsi:noNamespaceSchemaLocation='urn:magento:framework:View/Layout/etc/page_configuration.xsd'
 >
-	<head><css src='Df_GingerPaymentsBase::main.css'/></head>
+	<head><css src='Dfe_GingerPaymentsBase::main.css'/></head>
 </page>
